synchronous ball movement

--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
 <script src="./p5.play.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-database.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
 
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyAegQf0rltefnbv3t6yEXMvK1kPfMTkBxs",
+        authDomain: "multiplayer-car-racing-g-47bb9.firebaseapp.com",
+        databaseURL: "https://multiplayer-car-racing-g-47bb9-default-rtdb.firebaseio.com",
+        projectId: "multiplayer-car-racing-g-47bb9",
+        storageBucket: "multiplayer-car-racing-g-47bb9.appspot.com",
+        messagingSenderId: "893038982167",
+        appId: "1:893038982167:web:dd2d388a5f7ffdabf59852"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
   </head>
   <body>
       <script src="sketch.js"></script>
